--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -50,29 +50,29 @@
             android:orientation="horizontal"
             android:weightSum="3">
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
         </LinearLayout>
 
         <LinearLayout
@@ -81,29 +81,30 @@
             android:orientation="horizontal"
             android:weightSum="3">
 
-            <ImageView
+
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
         </LinearLayout>
 
         <LinearLayout
@@ -112,29 +113,29 @@
             android:orientation="horizontal"
             android:weightSum="3">
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_7"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_8"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
-            <ImageView
+            <com.example.eddy.vknews.SquaredImageView
                 android:id="@+id/image_9"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
