--- a/vksdk_library/src/main/res/values-v21/styles.xml
+++ b/vksdk_library/src/main/res/values-v21/styles.xml
@@ -8,5 +8,6 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:colorPrimary">@color/primary_material_light</item>
     </style>
 </resources>
