--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp"
-        tools:context="com.example.eddy.vknews.MainActivity">
+        tools:context="com.example.eddy.vknews.Activities.MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
